<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="delivery.com.ui.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_despatch_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextDefault"/>

        <TextView
            android:id="@+id/tv_run"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextDefault"/>

        <TextView
            android:id="@+id/tv_driver_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextDefault"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_download_dispatch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/download_dispatch"
                android:layout_margin="@dimen/activity_vertical_margin"
                style="@style/ButtonDefault"/>

            <Button
                android:id="@+id/btn_upload_dispatches"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/upload_dispatch"
                android:layout_margin="@dimen/activity_vertical_margin"
                style="@style/ButtonDefault"/>

        </LinearLayout>

        <Button
            android:id="@+id/btn_remove_datas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/remove_dispatch"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:layout_alignParentBottom="true"
            style="@style/ButtonRemove"/>
    </RelativeLayout>
</LinearLayout>
