<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/total_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp">

    <RelativeLayout
        android:id="@+id/stock_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/info_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_slot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="1"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/tv_title_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="[4565]"
                        style="@style/TextDefault"/>
                    <TextView
                        android:id="@+id/tv_size"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:text="[DL]"
                        style="@style/TextDefault"/>
                    <TextView
                        android:id="@+id/tv_stock"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:ellipsize="marquee"
                        android:marqueeRepeatLimit="marquee_forever"
                        android:focusable="true"
                        android:singleLine="true"
                        android:scrollHorizontally="true"
                        android:text="Nature in Art - Jan to August 2017"
                        style="@style/TextDefault"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/tv_stock_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="OUT OF STOCK"
                    android:textStyle="bold"
                    style="@style/TextDefault"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_below="@id/info_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_full"
                android:layout_width="0dp"
                android:layout_height="24dp"
                android:layout_weight="1"
                android:text="@string/btn_full"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:background="@drawable/qty_bg_default"/>
            <Button
                android:id="@+id/btn_restock"
                android:layout_width="0dp"
                android:layout_height="24dp"
                android:layout_weight="1"
                android:text="@string/btn_part"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:background="@drawable/qty_bg_default"/>

            <Button
                android:id="@+id/btn_none"
                android:layout_width="0dp"
                android:layout_height="24dp"
                android:layout_weight="1"
                android:text="@string/btn_none"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:background="@drawable/qty_bg_default"/>

            <Button
                android:id="@+id/btn_missing"
                android:layout_width="0dp"
                android:layout_height="24dp"
                android:layout_weight="1"
                android:text="@string/btn_missing"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:background="@drawable/qty_bg_default"/>

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/remove_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="vertical"
        android:visibility="visible">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_vertical_margin"
            android:background="@color/colorGray"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_refresh"
                android:layout_gravity="center_vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/tv_remove_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="[4564]"
                        style="@style/TextDefault"/>
                    <TextView
                        android:id="@+id/tv_remove"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:ellipsize="marquee"
                        android:marqueeRepeatLimit="marquee_forever"
                        android:focusable="true"
                        android:singleLine="true"
                        android:scrollHorizontally="true"
                        android:text="Nature in Art - Jan to August 2017"
                        style="@style/TextDefault"/>


                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/TextDefault"
                    android:text="@string/remove_stock"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/empty_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">
        <TextView
            android:id="@+id/tv_empty_slot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Empty row"
            android:textStyle="bold"
            style="@style/TextDefault"/>
    </LinearLayout>

</LinearLayout>